syntax = "proto3";

package proto;
//import "github.com/mwitkow/go-proto-validators/validator.proto";
//import "google/api/annotations.proto";

service CustomerService {
  rpc ListPerson(RequestType) returns (stream Person) {
    //    option (google.api.http) = {
    //  post: "/v1/customer_service/list_person"
    //  body: "*"
    //};
  };
  rpc AddPerson(Person) returns (ResponseType) {};
}

message ResponseType {
}

message RequestType {
}

message Person {
  string name = 1;
  int32 age = 2;// [(validator.field) = {int_gt: 0, int_lt: 100}];
}
